[Frontend] Avoid compressing messages horizontally too much

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -890,6 +890,10 @@ button.button-icon > img {
   padding-left: 5px;
 }
 
+.message-pane > .message-box .message,
+.message-pane > .message-box .input-bar {
+  min-width: 10em;
+}
 .message-pane > .message-box > .message:last-child {
   margin-bottom: 2px;
 }
